--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "guidr",
+  "homepage" : "https://guidr-front-end.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
