--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "guidr",
-  "homepage" : "https://guidr-front-end.herokuapp.com/",
+  "homepage": "https://guidr-front-end.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "jsonwebtoken": "^8.5.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
