--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
+    "date-fns": "^1.30.1",
+    "jquery": "1.9.1",
+    "popper.js": "1.14.7",
+    "prop-types": "^15.7.2",
     "react": "^16.8.1",
+    "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1",
+    "react-onclickoutside": "^6.8.0",
+    "react-popper": "^1.3.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
