--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "1.9.1",
     "popper.js": "1.14.7",
     "prop-types": "^15.7.2",
+    "jsonwebtoken": "^8.5.0",
     "react": "^16.8.1",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1",
