--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.409.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
     "jquery": "1.9.1",
+    "jsonwebtoken": "^8.5.0",
+    "pip": "^0.0.1",
     "popper.js": "1.14.7",
     "prop-types": "^15.7.2",
-    "jsonwebtoken": "^8.5.0",
     "react": "^16.8.1",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1",
