--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
+    "global": "^4.3.2",
     "jquery": "1.9.1",
     "jsonwebtoken": "^8.5.0",
+    "less": "^3.9.0",
+    "less-watch-compiler": "^1.13.0",
     "pip": "^0.0.1",
     "popper.js": "1.14.7",
     "prop-types": "^15.7.2",
